--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://dry-shelf-73793.herokuapp.com",
-  "proxy2": "http://localhost:3001",
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@apollo/client": "^3.5.10",
     "@testing-library/jest-dom": "^5.16.2",
